--- a/style.css
+++ b/style.css
@@ -133,18 +133,13 @@ nav {
   z-index: 100;
   background-color: var(--main-bg-color, white);
 }
-li.nav-item {
-  text-align: center;
-  font-size: 1.5em;
-  display: inline;
-  padding: 5px;
-}
-li.nav-item a {
-  display: inline-block;
-  width: 100%;
+a.nav-item {
+  display: block;
   color: var(--main-color, black);
   padding: 10px;
+  text-align: center;
   text-transform: uppercase;
+  font-size: 1.5em;
   font-weight: 600;
 }
 
@@ -169,21 +164,22 @@ footer {
   #menuBtn {
     display: none;
   }
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   nav {
     position: relative;
-    display: inline;
-  }
-  ul.nav {
+    overflow: initial;
+    width: auto;
     background-color: var(--primary-color, white);
   }
-  div.header-row,
-  ul.nav,
-  li.nav-item {
-    display: inline-block;
+  a.nav-item {
+    display: inline;
   }
   h1.logo {
     font-size: 4em;
-    line-height: 80px;
   }
   .cards {
     flex-direction: row;
