--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {
 
 /* Main Page styles */
 main.container {
-  margin-top: 80px;
+  margin-top: 70px;
   padding: 0 25px;
   text-align: center;
+  min-height: 80vh;
 }
 a {
   color: var(--main-color, black);
@@ -89,14 +90,14 @@ header {
 }
 h1.logo {
   margin: 0 5px;
-  line-height: 65px;
+  line-height: 54px;
   display: inline;
-  font-size: 3em;
+  font-size: 2.5em;
 }
 #menuBtn {
   display: inline-block;
   cursor: pointer;
-  margin: 10px;
+  margin: 5px;
 }
 #menuBtn:hover {
   filter: brightness(0.5);
@@ -124,7 +125,7 @@ h1.logo {
 .change .bar3 {
   transform: rotate(45deg) translate(-11px, -9px);
 }
-nav {
+nav#web-navbar {
   height: 0;
   width: 100%;
   position: fixed;
@@ -156,11 +157,13 @@ footer {
   border-top: 1px solid var(--border-color, grey);
 }
 
+/* Hide PWA navbar */
+nav#app-navbar {
+  display: none;
+}
+
 /* Desktop styles */
 @media only screen and (min-width: 768px) {
-  main.container {
-    margin-top: 100px;
-  }
   #menuBtn {
     display: none;
   }
@@ -169,7 +172,7 @@ footer {
     justify-content: space-between;
     align-items: center;
   }
-  nav {
+  nav#web-navbar {
     position: relative;
     overflow: initial;
     width: auto;
@@ -180,6 +183,7 @@ footer {
   }
   h1.logo {
     font-size: 4em;
+    padding: 5px;
   }
   .cards {
     flex-direction: row;
@@ -187,6 +191,43 @@ footer {
   }
   .card {
     margin: 5px;
+  }
+}
+
+/* Installed PWA Styles */
+@media (display-mode: standalone) {
+  main.container {
+    margin-bottom: 70px;
+  }
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--primary-color, white);
+  }
+  #menuBtn {
+    display: none;
+  }
+  nav#web-navbar {
+    display: none;
+  }
+  .header-row {
+    justify-content: center;
+  }
+  nav#app-navbar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu-icon {
+    width: 32px;
+    margin: 0 25px;
+  }
+  a.nav-item {
+    display: inline;
+  }
+  footer p {
+    display: none;
   }
 }
 
